--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
     "version": "1.0.0",
     "scripts": {
         "client": "cd client && yarn start",
-        "server": "nodemon server.js",
-        "dev": "concurrently --kill-others-on-fail \"yarn server\"\"yarn client\""
+        "server": "node server.js",
+        "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
-        "body-parser": "^1.18.3",
-        "express": "^4.16.4",
-        "nodemon": "^2.0.7"
+        "body-parser": "^1.19.0",
+        "express": "^4.17.1",
+        "yarn": "^1.13.0"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1"
+        "concurrently": "^4.1.2"
     }
 }
